BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithoutProfilesXLation/src/objects/EM_Event_Budget_vod__c.object
<CustomObject>
    <fields>
        <fullName>Budget_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The budget being accessed by the event.</description>
        <label>WBS/CC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Budget_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Available_For_Use_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Budget_vod__c</referenceTo>
        <relationshipLabel>WBS/CCs</relationshipLabel>
        <relationshipName>EM_Event_Budget_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Canceled_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked automatically if the associated activity is canceled.</description>
        <label>Event Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The activity that is accessing the budget</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>WBS/CCs</relationshipLabel>
        <relationshipName>Event_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>WBS_CC_Simple_HCPTS</fullName>
        <active>true</active>
        <description>WBS/CC Information</description>
        <label>WBS/CC</label>
    </recordTypes>
    <validationRules>
        <fullName>Need_End_Date_After_Atvty_Start_Date</fullName>
        <active>true</active>
        <description>Please select a Budget that has an End Date After the Event&apos;s End Date.</description>
        <errorConditionFormula>Budget_vod__r.End_Date_vod__c &lt; DATEVALUE(Event_vod__r.End_Time_vod__c)</errorConditionFormula>
        <errorMessage>Please select a Budget that has an End Date After the Event&apos;s End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_Start_Date_Before_Atvty_Start_Date</fullName>
        <active>true</active>
        <description>Please select a Budget that has a start date before the Event&apos;s Start Date.</description>
        <errorConditionFormula>Budget_vod__r.Start_Date_vod__c &gt; DATEVALUE(Event_vod__r.Start_Time_vod__c)</errorConditionFormula>
        <errorMessage>Please select a Budget that has a start date before the Event&apos;s Start Date.</errorMessage>
    </validationRules>
</CustomObject>